themes/custom/mat/sass/pages/_storiesapi.scss
/* ... */
.controls {
    position: relative;
    top: 0;
    width: 100%;
    z-index: 10;
    background-color: $nav-pre-content-bg;
    height: $nav-pre-content-height;
    display: flex;
    @extend %small;
    font-weight: 500;

    .container {
      flex-wrap: wrap;
      display: flex;
      align-items: center;
      justify-content: center;
    }

    @media (max-width: $screen-md-max) {
      height: unset;

      .container {
        margin: 0;
        padding: 0;

        .filter-wrapper,
        .alphabet-wrapper {
          padding: 10px 30px;
        }

        .alphabet-wrapper {
          background-color: #e0e0e0;
        }
      }
    }

    .filter-wrapper {
      color: $gray-base;

      .active {
        color: $color-black;
      }

      .cat-item {
        cursor: pointer;

        @media (min-width: $screen-sm-min) {
           padding: 0 1vw;

          &:first-child {
            padding-left: 0;
          }

          &:last-child {
            padding-right: 0;
          }
        }

        @media (min-width: $screen-md-min) {
          padding: 0 1.5vw;
        }

        @media (min-width: $screen-lg-min) {
          padding: 0 2rem;
        }
      }

      // Mobile view - transparent gradient at the beginning and at the end of the controls slider.
      &.slick-slider {
        &:after {
          content: '';
          top: 0;
          position: absolute;
          right: 30px;
          height: 100%;
          width: 2.5rem;
          background: #fff;
          background: linear-gradient(to right, rgba(255, 255, 255, 0), rgb(237, 237, 237));
          z-index: 1;
        }
      }
    }

    .alphabet-wrapper {
      justify-content: space-between;

      @media (min-width: $screen-md-max) {
        justify-content: flex-end;
      }
    }

    .filter-wrapper,
    .alphabet-wrapper {
      display: flex;
      flex-grow: 1;

      @media (min-width: 500px) and (max-width: $screen-md-max) {
        justify-content: center;
      }

      > label {
        color: $blue-dark;

        span {
          @media (max-width: $screen-sm-max) {
            display: none;
          }
        }

        i {
          @media (min-width: $screen-sm-min) {
            display: none;
          }
        }
      }

      .dropdown-wrapper {
        position: relative;
        padding-right: 10px;
        width: ($option-width + 35px);
        cursor: pointer;
        text-align: center;

        &:before {
          display: inline-block;
          width: 16px;
          height: 8px;
          position: absolute;
          top: 7px;
          right: 0;
          content: '';
          @include icons('i-chevron-nav-blue');
          background-position: center center;

          @media (min-width: $screen-sm-min) {
            top: 34%;
          }
        }
      }
      .dropdown {
        position: absolute;
        top: 0;
        left: 50%;
        height: 0;
        margin-left: -42px;
        transition: height ease-in-out .35s;
        overflow: hidden;
        border-bottom-left-radius: $border-radius-base;
        border-bottom-right-radius: $border-radius-base;

        .dropdown-inner {
          height: 0;
          margin-top: 50px;
          padding-bottom: 50px;
          border-top-left-radius: $border-radius-base;
          border-top-right-radius: $border-radius-base;
          box-shadow: 0 0 12px 0 rgba(0, 0, 0, 0.1);
        }

        &.open {
          &,
          .dropdown-inner {
            height: 400px;
          }

          .dropdown-inner {
            overflow-y: auto;
            height: 350px;
            padding: 0;
          }
        }

        &:before {
          display: block;
          content: "";
          width: 0;
          height: 0;
          border-style: solid;
          position: absolute;
          top: 32px;
          left: $option-width/4;
          border-width: 0 $option-width/4 $option-width/4 $option-width/4;
          border-color: transparent transparent white transparent;
        }

        .option {
          background-color: $color-white;
          color: $gray-base;
          width: $option-width;
          height: $option-width;
          display: flex;
          justify-content: center;
          align-items: center;
          cursor: pointer;
          border-bottom: solid 1px $gray-light;

          &:last-child {
            border-bottom: none;
            border-bottom-left-radius: $border-radius-base;
            border-bottom-right-radius: $border-radius-base;
          }

          &:hover {
            color: $gray-light;
          }

          &.active {
            color: #0BAADB;
          }
        }
      }

      .selected {
        @include font-size(2);
        line-height: 1;
      }
    }
}

.controls .filter-wrapper .active.cat-item {
    font-weight: bold !important;
    color: #4a4a4a;
    white-space: nowrap;
}

html.modal-open {
  overflow: hidden;
}

